appId: fm.sotto.app
---
- tapOn:
    id: 'login-email-input'
- inputText: '${TEST_EMAIL}'
- tapOn:
    id: 'login-sign-in-button'
- extendedWaitUntil:
    visible:
      id: 'library-episode-list'
    timeout: 10000
